--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
 
     <h1> VIDEO GAME </h1>
 
@@ -19,15 +18,7 @@
 
             <div>
 
-                <form for="pseudo">
-
-                    <label for="pseudo" style="color: whitesmoke"> Pseudonyme : </label>
-
-                    <input type="text" name="pseudo" id="pseudo">
-
                     <input type="submit" name="start" id="btStart" value="START">
-
-                </form>
 
             </div>
 
