--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/jquery.js"></script>
+    <script src="jquery.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
