--- a/index.html
+++ b/index.html
@@ -14,21 +14,75 @@
 
     <div id="welcome">
 
-        <div id="partie1">
+        <div id="start" class="macro">
 
             <div>
 
-                    <input type="submit" name="start" id="btStart" value="START">
+                    <input type="submit" name="btStart" id="btStart" value="START">
 
             </div>
 
         </div>
 
-        <div id="partie2">
+        <div id="map">
 
             <div id="corps">
 
-                <img src="image/test_map.png">
+                <div id="icone0"> </div>
+
+            </div>
+
+        </div>
+
+        <div id="quest" class="macro">
+
+            <div>
+
+                <h2 id="quest0">  Mairie </h2>
+
+                <li> exemple de quête 1 </li>
+                <li> exemple de quête 2 </li>
+                <li> exemple de quête 3 </li>
+
+            </div>
+
+            <div>
+
+                <h2 id="quest1"> L@bo </h2>
+
+                <li> exemple de quête 1 </li>
+                <li> exemple de quête 2 </li>
+                <li> exemple de quête 3 </li>
+
+            </div>
+
+            <div>
+
+                <h2 id="quest2"> Médiatèque </h2>
+
+                <li> exemple de quête 1 </li>
+                <li> exemple de quête 2 </li>
+                <li> exemple de quête 3 </li>
+
+            </div>
+
+            <div>
+
+                <h2 id="quest3"> Ecomusée </h2>
+
+                <li> exemple de quête 1 </li>
+                <li> exemple de quête 2 </li>
+                <li> exemple de quête 3 </li>
+
+            </div>
+
+            <div>
+
+                <h2 id="quest4"> Maison de l'europe </h2>
+
+                <li> exemple de quête 1 </li>
+                <li> exemple de quête 2 </li>
+                <li> exemple de quête 3 </li>
 
             </div>
 
