AJOUT ICONES SUR BATIMENTS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
             <div id="corps">
 
-                <div id="icone0"> </div>
+                <div class="icone" id="icone0"> </div>
+                <div class="icone" id="icone1"> </div>
+                <div class="icone" id="icone2"> </div>
+                <div class="icone" id="icone3"> </div>
+                <div class="icone" id="icone4"> </div>
+
+
 
             </div>
 
