--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Title</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/css2.css">
+
 </head>
 
 <body>
@@ -33,6 +35,12 @@
                 <div class="icone" id="icone2"> </div>
                 <div class="icone" id="icone3"> </div>
                 <div class="icone" id="icone4"> </div>
+
+                <div id="bann1"> </div>
+                <div id="bann2"> </div>
+                <div id="bann3"> </div>
+                <div id="bann4"> </div>
+                <div id="bann5"> </div>
 
 
 
