--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="jquery.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/css2.css">
+    <script src="../js/jquery.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/css2.css">
 
 </head>
 
@@ -26,7 +26,7 @@
 
         </div>
 
-        <div id="map">
+        <div id="map" class="map">
 
             <div id="corps">
 
@@ -104,7 +104,7 @@
 
     </div>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 
 </body>
 </html>
