--- a/html/maison-europe_quete.html
+++ b/html/maison-europe_quete.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="jquery.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/css2.css">
+    <script src="../js/jquery.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/css2.css">
 </head>
 <body>
 
@@ -14,15 +14,6 @@
 
 <div id="welcome">
 
-    <div id="start" class="macro">
-
-        <div>
-
-            <input type="submit" name="btStart" id="btStart" value="START">
-
-        </div>
-
-    </div>
 
     <div id="map">
 
@@ -40,31 +31,12 @@
             <div id="bann4"> </div>
             <div id="bann5"> </div>
 
-
-
-        </div>
-
-    </div>
-
-    <div id="quest" class="macro">
-
-        <div>
-
-            <h2 id="quest0">  Mairie </h2>
-
-            <li> exemple de quête 1 </li>
-            <li> exemple de quête 2 </li>
-            <li> exemple de quête 3 </li>
-
         </div>
 
     </div>
 
 </div>
 
-
-
-
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
