ajout avatar page d'accueil

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,15 @@
 
             <div>
 
+                <div class="avatar">
+
+                    <input type="radio" id="value1" name="avatar" value="1" checked> <img src="../image/chevalier.png" height="50px">
+                    <input type="radio" id="value2" name="avatar" value="2"> <img src="../image/hollow.png" height="50px">
+                    <input type="radio" id="value3" name="avatar" value="3"> <img src="../image/vampire.png" height="50px">
+                    <input type="radio" id="value4" name="avatar" value="4"> <img src="../image/cyriak.png" height="50px">
+
+                </div>
+
                     <input type="submit" name="btStart" id="btStart" value="START">
 
             </div>
@@ -42,8 +51,6 @@
                 <div id="bann4"> </div>
                 <div id="bann5"> </div>
 
-
-
             </div>
 
         </div>
@@ -54,9 +61,11 @@
 
                 <h2 id="quest0">  Mairie </h2>
 
-                <li> exemple de quête 1 </li>
-                <li> exemple de quête 2 </li>
-                <li> exemple de quête 3 </li>
+                <ul>
+                    <li> exemple de quête 1 </li>
+                    <li> exemple de quête 2 </li>
+                    <li> exemple de quête 3 </li>
+                </ul>
 
             </div>
 
@@ -64,9 +73,11 @@
 
                 <h2 id="quest1"> L@bo </h2>
 
-                <li> exemple de quête 1 </li>
-                <li> exemple de quête 2 </li>
-                <li> exemple de quête 3 </li>
+                <ul>
+                    <li> exemple de quête 1 </li>
+                    <li> exemple de quête 2 </li>
+                    <li> exemple de quête 3 </li>
+                </ul>
 
             </div>
 
@@ -74,9 +85,11 @@
 
                 <h2 id="quest2"> Médiatèque </h2>
 
-                <li> exemple de quête 1 </li>
-                <li> exemple de quête 2 </li>
-                <li> exemple de quête 3 </li>
+                <ul>
+                    <li> exemple de quête 1 </li>
+                    <li> exemple de quête 2 </li>
+                    <li> exemple de quête 3 </li>
+                </ul>
 
             </div>
 
@@ -84,9 +97,11 @@
 
                 <h2 id="quest3"> Ecomusée </h2>
 
-                <li> exemple de quête 1 </li>
-                <li> exemple de quête 2 </li>
-                <li> exemple de quête 3 </li>
+                <ul>
+                    <li> exemple de quête 1 </li>
+                    <li> exemple de quête 2 </li>
+                    <li> exemple de quête 3 </li>
+                </ul>
 
             </div>
 
@@ -94,9 +109,11 @@
 
                 <h2 id="quest4"> Maison de l'europe </h2>
 
-                <li> exemple de quête 1 </li>
-                <li> exemple de quête 2 </li>
-                <li> exemple de quête 3 </li>
+                <ul>
+                    <li> exemple de quête 1 </li>
+                    <li> exemple de quête 2 </li>
+                    <li> exemple de quête 3 </li>
+                </ul>
 
             </div>
 
