modif page d'accueil

--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,7 @@
 
                 <div class="avatar">
 
-                    <input type="radio" id="value1" name="avatar" value="1" checked> <img src="../image/chevalier.png" height="50px">
-                    <input type="radio" id="value2" name="avatar" value="2"> <img src="../image/hollow.png" height="50px">
-                    <input type="radio" id="value3" name="avatar" value="3"> <img src="../image/vampire.png" height="50px">
-                    <input type="radio" id="value4" name="avatar" value="4"> <img src="../image/cyriak.png" height="50px">
+                    <img src="../image/chevalier.png" height="70px">
 
                 </div>
 
