ajout perso sur map

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,8 @@
 
             <div id="corps">
 
+                <div id="perso"> <img src="../image/chevalier.png" height="70px"> </div>
+
                 <div class="icone" id="icone0"> </div>
                 <div class="icone" id="icone1"> </div>
                 <div class="icone" id="icone2"> </div>
@@ -47,6 +49,12 @@
                 <div id="bann3"> </div>
                 <div id="bann4"> </div>
                 <div id="bann5"> </div>
+
+                <div id="cadre0"> </div>
+                <div id="cadre1"> </div>
+                <div id="cadre2"> </div>
+                <div id="cadre3"> </div>
+                <div id="cadre4"> </div>
 
             </div>
 
