--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
 
             <div id="corps">
 
-                <div id="perso"> <img src="../image/chevalier.png" height="70px"> </div>
+                <div id="perso"> <img src="../image/chevalier.png" height="70px">  </div>
 
                 <div class="icone" id="icone0"> </div>
                 <div class="icone" id="icone1"> </div>
@@ -44,17 +44,17 @@
                 <div class="icone" id="icone3"> </div>
                 <div class="icone" id="icone4"> </div>
 
-                <div id="bann1"> </div>
-                <div id="bann2"> </div>
-                <div id="bann3"> </div>
-                <div id="bann4"> </div>
-                <div id="bann5"> </div>
+                <div class="banniere" id="bann1"> </div>
+                <div class="banniere" id="bann2"> </div>
+                <div class="banniere" id="bann3"> </div>
+                <div class="banniere" id="bann4"> </div>
+                <div class="banniere" id="bann5"> </div>
 
-                <div id="cadre0"> </div>
-                <div id="cadre1"> </div>
-                <div id="cadre2"> </div>
-                <div id="cadre3"> </div>
-                <div id="cadre4"> </div>
+                <div class="cadre" id="cadre0"> </div>
+                <div class="cadre" id="cadre1"> </div>
+                <div class="cadre" id="cadre2"> </div>
+                <div class="cadre" id="cadre3"> </div>
+                <div class="cadre" id="cadre4"> </div>
 
             </div>
 
