--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,7 @@
 
             <div>
 
-                <div class="avatar">
-
-                    <img src="../image/chevalier.png" height="70px">
-
-                </div>
+                <div id="avatar"> </div>
 
                     <input type="submit" name="btStart" id="btStart" value="START">
 
@@ -35,6 +31,8 @@
         <div id="map" class="map">
 
             <div id="corps">
+
+                <div id="perso"> </div>
 
 
                 <div class="icone" id="icone0"> </div>
