--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <h1> VIDEO GAME </h1>
+<h1> VIDEO GAME </h1>
 
     <div id="welcome">
 
@@ -124,6 +124,8 @@
     </div>
 
 <script src="../js/script.js"></script>
+    <script src="../js/json.js"></script>
+
 
 </body>
 </html>
