json / ajax numero 2

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/css2.css">
 
+
 </head>
 
 <body>
@@ -27,6 +28,8 @@
             </div>
 
         </div>
+
+        <div id="super_glo">
 
         <div id="map" class="map">
 
@@ -57,74 +60,28 @@
 
         </div>
 
+
+
+
         <div id="quest" class="macro">
 
-            <div>
 
-                <h2 id="quest0">  Mairie </h2>
 
-                <ul>
-                    <li> exemple de quête 1 </li>
-                    <li> exemple de quête 2 </li>
-                    <li> exemple de quête 3 </li>
-                </ul>
+        </div>
+
+            <div id="">
+
 
             </div>
-
-            <div>
-
-                <h2 id="quest1"> L@bo </h2>
-
-                <ul>
-                    <li> exemple de quête 1 </li>
-                    <li> exemple de quête 2 </li>
-                    <li> exemple de quête 3 </li>
-                </ul>
-
-            </div>
-
-            <div>
-
-                <h2 id="quest2"> Médiatèque </h2>
-
-                <ul>
-                    <li> exemple de quête 1 </li>
-                    <li> exemple de quête 2 </li>
-                    <li> exemple de quête 3 </li>
-                </ul>
-
-            </div>
-
-            <div>
-
-                <h2 id="quest3"> Ecomusée </h2>
-
-                <ul>
-                    <li> exemple de quête 1 </li>
-                    <li> exemple de quête 2 </li>
-                    <li> exemple de quête 3 </li>
-                </ul>
-
-            </div>
-
-            <div>
-
-                <h2 id="quest4"> Maison de l'europe </h2>
-
-                <ul>
-                    <li> exemple de quête 1 </li>
-                    <li> exemple de quête 2 </li>
-                    <li> exemple de quête 3 </li>
-                </ul>
-
-            </div>
-
         </div>
 
     </div>
 
 <script src="../js/script.js"></script>
-    <script src="../js/json.js"></script>
+<script src="../js/json.js"></script>
+
+
+
 
 
 </body>
