--- a/html/index.html
+++ b/html/index.html
@@ -29,50 +29,37 @@
 
         </div>
 
+        <div id="quest" class="macro"> </div>
+
         <div id="super_glo">
 
-        <div id="map" class="map">
+                <div id="corps">
 
-            <div id="corps">
-
-                <div id="perso"> </div>
+                    <div id="perso"> </div>
 
 
-                <div class="cadre" id="cadre0"> </div>
-                <div class="cadre" id="cadre1"> </div>
-                <div class="cadre" id="cadre2"> </div>
-                <div class="cadre" id="cadre3"> </div>
-                <div class="cadre" id="cadre4"> </div>
+                    <div class="cadre" id="cadre0"> </div>
+                    <div class="cadre" id="cadre1"> </div>
+                    <div class="cadre" id="cadre2"> </div>
+                    <div class="cadre" id="cadre3"> </div>
+                    <div class="cadre" id="cadre4"> </div>
 
-                <div class="icone" id="icone0"> </div>
-                <div class="icone" id="icone1"> </div>
-                <div class="icone" id="icone2"> </div>
-                <div class="icone" id="icone3"> </div>
-                <div class="icone" id="icone4"> </div>
+                    <div class="icone" id="icone0"> </div>
+                    <div class="icone" id="icone1"> </div>
+                    <div class="icone" id="icone2"> </div>
+                    <div class="icone" id="icone3"> </div>
+                    <div class="icone" id="icone4"> </div>
 
-                <div class="banniere" id="bann1"> </div>
-                <div class="banniere" id="bann2"> </div>
-                <div class="banniere" id="bann3"> </div>
-                <div class="banniere" id="bann4"> </div>
-                <div class="banniere" id="bann5"> </div>
+                    <div class="banniere" id="bann1"> </div>
+                    <div class="banniere" id="bann2"> </div>
+                    <div class="banniere" id="bann3"> </div>
+                    <div class="banniere" id="bann4"> </div>
+                    <div class="banniere" id="bann5"> </div>
 
-            </div>
+                </div>
 
-        </div>
+                <div id="resume"> </div>
 
-
-
-
-        <div id="quest" class="macro">
-
-
-
-        </div>
-
-            <div id="">
-
-
-            </div>
         </div>
 
     </div>
