--- a/html/ecomusee_quete.html
+++ b/html/ecomusee_quete.html
@@ -14,10 +14,17 @@
 
 <div id="welcome">
 
-
-    <div id="map">
+    <div id="super_glo">
 
         <div id="corps">
+
+            <div id="perso"> </div>
+
+            <div class="cadre" id="cadre0"> </div>
+            <div class="cadre" id="cadre1"> </div>
+            <div class="cadre" id="cadre2"> </div>
+            <div class="cadre" id="cadre3"> </div>
+            <div class="cadre" id="cadre4"> </div>
 
             <div class="icone" id="icone0"> </div>
             <div class="icone" id="icone1"> </div>
@@ -25,19 +32,20 @@
             <div class="icone" id="icone3"> </div>
             <div class="icone" id="icone4"> </div>
 
-            <div id="bann1"> </div>
-            <div id="bann2"> </div>
-            <div id="bann3"> </div>
-            <div id="bann4"> </div>
-            <div id="bann5"> </div>
+            <div class="banniere" id="bann1"> </div>
+            <div class="banniere" id="bann2"> </div>
+            <div class="banniere" id="bann3"> </div>
+            <div class="banniere" id="bann4"> </div>
+            <div class="banniere" id="bann5"> </div>
 
         </div>
 
+        <div class="resume" id="resume3"> </div>
+
     </div>
 
+    <script src="../js/script.js"></script>
+    <script src="../js/json2.js"></script>
 
-</div>
-
-<script src="../js/script.js"></script>
 </body>
 </html>
