--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
 
                 </div>
 
-                <div id="resume"> </div>
+                <div class="resume" id="resume0"> </div>
 
         </div>
 
