--- a/html/ecomusee_quete.html
+++ b/html/ecomusee_quete.html
@@ -43,6 +43,7 @@
         <div class="resume" id="resume3"> </div>
 
     </div>
+</div>
 
     <script src="../js/script.js"></script>
     <script src="../js/json2.js"></script>
