--- a/html/quête_mediatheque.html
+++ b/html/quête_mediatheque.html
@@ -43,6 +43,8 @@
         <div class="resume" id="resume2"> </div>
 
     </div>
+</div>
+
 
 <script src="../js/script.js"></script>
 <script src="../js/json2.js"></script>
