--- a/html/quête_labo.html
+++ b/html/quête_labo.html
@@ -43,8 +43,10 @@
         <div class="resume" id="resume1"> </div>
 
     </div>
+</div>
 
-    <script src="../js/script.js"></script>
+
+<script src="../js/script.js"></script>
     <script src="../js/json2.js"></script>
 
 </body>
