--- a/html/ecomusee_quete.html
+++ b/html/ecomusee_quete.html
@@ -6,6 +6,8 @@
     <script src="../js/jquery.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/css2.css">
+    <link rel="stylesheet" href="../css/style3.css">
+
 </head>
 <body>
 
