--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <script src="../js/jquery.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/css2.css">
+    <link rel="stylesheet" href="../css/style3.css">
+
 
 
 </head>
