--- a/html/maison-europe_quete.html
+++ b/html/maison-europe_quete.html
@@ -42,6 +42,10 @@
 
         </div>
 
+        <div class="resume" id="resume0"> </div>
+        <div class="resume" id="resume1"> </div>
+        <div class="resume" id="resume2"> </div>
+        <div class="resume" id="resume3"> </div>
         <div class="resume" id="resume4"> </div>
 
     </div>
