--- a/html/quête_labo.html
+++ b/html/quête_labo.html
@@ -42,7 +42,11 @@
 
         </div>
 
+        <div class="resume" id="resume0"> </div>
         <div class="resume" id="resume1"> </div>
+        <div class="resume" id="resume2"> </div>
+        <div class="resume" id="resume3"> </div>
+        <div class="resume" id="resume4"> </div>
 
     </div>
 </div>
