--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
 
 <script src="../js/script.js"></script>
 <script src="../js/json.js"></script>
+<script src="../js/mouvement.js"></script>
 
 
 
