--- a/html/quête_mairie.html
+++ b/html/quête_mairie.html
@@ -50,6 +50,7 @@
 
 <script src="../js/script.js"></script>
 <script src="../js/json2.js"></script>
+<script src="../js/mouvement.js"></script>
 
 </body>
 </html>
