--- a/html/quête_mairie.html
+++ b/html/quête_mairie.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/css2.css">
     <link rel="stylesheet" href="../css/style3.css">
+
 </head>
 <body>
 
@@ -50,6 +51,7 @@
 
 <script src="../js/script.js"></script>
 <script src="../js/json2.js"></script>
+<script src="../js/mouvement.js"></script>
 
 </body>
 </html>
