--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> page d'accueil </title>
     <script src="../js/jquery.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/css2.css">
@@ -14,9 +14,9 @@
 
 <body>
 
-<h1> VIDEO GAME </h1>
+<h1>  </h1>
 
-    <div id="welcome">
+    <div id="first_page">
 
         <div id="start" class="macro">
 
