ajout boutton quitter sur les 3 jeux + fonction retour vers index.php

--- a/game/Jeu dechetterie(jquery)/index.html
+++ b/game/Jeu dechetterie(jquery)/index.html
@@ -46,7 +46,7 @@
         <a href="https://recyclage.ooreka.fr/astuce/voir/745361/tri-selectif">Tri Sélectif</a>
     </span>
 
-
+    <br><button type="button" id="btn_quit" style="margin-left: 40%;">Quitter le Jeu</button>
     <br><br><br><br>
 
     <h2>Résultat :</h2>
