--- a/game/jeu_MEMORY-master/memory.html
+++ b/game/jeu_MEMORY-master/memory.html
@@ -104,7 +104,7 @@
 
         <div id="div" class="mt-5">
             <img id="replay" src="replay.png" alt="image de bouton replay">
-
+            <button type="button" id="btn_quit" style="margin-top: 10%; margin-left: -7%">Quitter</button>
         </div>
 
 
