--- a/game/qcm_choix_multiple-master/index.html
+++ b/game/qcm_choix_multiple-master/index.html
@@ -100,6 +100,8 @@
 
             <img id="replay" src="replay.png" alt="image de replay">
 
+            <button id="btn_quit" type="button">Quitter</button>
+
             </div>
 
         </section>
